# protein_mobility

./: .gitignore  README.md  pyproject.toml
scripts/: main.py
scripts/R/: 01_clean_data.R  01_data_cleanup.R  02_statistics.R  03_create_plots.R  03_visualization.R  main.R
scripts/R/helpers/: _panel.error.R  _plot_template.R  _theme.R
